samples/_failures_safe/1761271781_eaa144_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91b798c0.c: In function ‘main’:
./samples/SAFE/__tmp_91b798c0.c:153:17: error: expected declaration or statement at end of input
  153 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_91b798c0.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91b798c0.c:153:17: error: expected declaration or statement at end of input
